# slvfe-openacc

./: .gitignore  ChangeLog  Makefile.am  README  bestfit.F90  configure.ac  enganal.F90  engmain.F90  engproc.F90  fft_iface.F90  hash_real.c  insertion.F90  mpiproc.F90  randgen.F90  realcal.F90  recpcal.F90  setconf.F90  sfecorrect.F90  sfemain.F90  slvfe.F90  spline.F90  trajectory.F90  utility.F90  vmdfio.c
extensions/Conditional/: README  diff_conditional  diff_engmain  diff_engproc  diff_insertion  diff_setconf  engmain.F90  engproc.F90  insertion.F90  setconf.F90
extensions/LJLRC/: diff_slvfe  slvfe.F90
m4/: acx_blas.m4
tools/: bootstrap  mol_dissection  refs_converge  refs_converge_py2  refs_converge_py3
tools/AMBER/: gen_input  gen_structure
tools/CHARMM/: gen_input
tools/GENESIS/: gen_input  gen_structure  gen_structure_AMBER  gen_structure_CHARMM  gen_structure_GROMACS
tools/GROMACS/: gen_input  gen_structure
tools/LAMMPS/: gen_input  gen_structure
tools/MARBLE/: README  gen_input  gen_structure
tools/MODYLAS/: README  gen_input  gen_structure
tools/NAMD/: gen_input  gen_structure
tools/gromacs/: gen_input  gen_structure
tools/unmaintained/MARBLE/: gen_input
tools/unmaintained/MODYLAS/: gen_input
